force-app/main/default/objects/WebsiteListingShowing__c/WebsiteListingShowing__c.object-meta.xml
<CustomObject>
    <label>Website Showing</label>
    <nameField>
        <label>Website Showing</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Website Showings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>