force-app/main/default/objects/WebsiteListingShowing__c/fields/LuxuryBuildingName__c.field-meta.xml
<CustomField>
    <fullName>LuxuryBuildingName__c</fullName>
    <label>Luxury Building Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>