force-app/main/default/objects/WebsiteListingShowing__c/fields/MlsName__c.field-meta.xml
<CustomField>
    <fullName>MlsName__c</fullName>
    <label>MLS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>