force-app/main/default/objects/WebsiteListingShowing__c/fields/ShowingTime__c.field-meta.xml
<CustomField>
    <fullName>ShowingTime__c</fullName>
    <label>Showing Time</label>
    <type>DateTime</type>
</CustomField>